#36 - text-alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -1595,8 +1595,20 @@ textarea:focus {
   .fund-risk img {
     margin: 0 auto;
   }
+  .brand-data {
+    -webkit-box-align: baseline;
+    -webkit-align-items: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
   .brand-data .brand-box {
     left: 0;
+  }
+  .brand-data .bucket {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
   }
   .fund-stats {
     background-color: #fff;
