--- a/less/_single-fund.less
+++ b/less/_single-fund.less
@@ -416,8 +416,12 @@
 	}
 	.brand-data{
 		// align-items: center;
+		align-items: baseline;
 		.brand-box{
 			left: 0;
+		}
+		.bucket{
+			flex: 1;
 		}
 	}
 	.fund-stats{
